--- a/README.Rmd
+++ b/README.Rmd
@@ -70,7 +70,28 @@ All variables available in the raw play-by-play data are included, along with a 
 
 The `shot_distance` and `shot_angle` are measured in feet and degrees, respectively. The variables `x_fixed` and `y_fixed` are transformations of the `x` and `y` event coordinates such that the home team is always shooting to the right and the away team is always shooting to the left. For full details on the included variables, see the [`scrape_game`](https://github.com/danmorse314/hockeyR/blob/master/R/scrape_game.R) documentation.
 
-As mentioned above, an easy way to create a shot plot is through the [sportyR](https://github.com/sportsdataverse/sportyR) package. You can also use the included `team_colors_logos` data to add color and team logos to your plots.
+#### NEW in hockeyR v1.1.0: Expected Goals
+
+As of `hockeyR` v1.1.0, a new column has been added to the play-by-play data: Expected goals! The `hockeyR` package now includes its own public expected goals model, and every unblocked shot in the play-by-play data now has an `xg` value. A full description of the model, including the code used to construct it and the testing results, can be found in the [hockeyR-models](https://github.com/danmorse314/hockeyR-models) repository. Users can now investigate additional statistics, such as player goals above expectation without having to create their own entire model.
+
+```{r xg-example}
+pbp %>%
+  filter(event_type %in% c("SHOT","MISSED_SHOT","GOAL")) %>%
+  group_by(player = event_player_1_name, id = event_player_1_id) %>%
+  summarize(
+    team = last(event_team_abbr),
+    goals = sum(event_type == "GOAL"),
+    xg = round(sum(xg, na.rm = TRUE),1),
+    gax = goals - xg,
+    .groups = "drop"
+  ) |>
+  arrange(-xg) |>
+  slice(1:10)
+```
+
+#### Shot Plots
+
+An easy way to create a shot plot is through the [sportyR](https://github.com/sportsdataverse/sportyR) package. You can also use the included `team_colors_logos` data to add color and team logos to your plots.
 
 ```{r shot-plot-example}
 # get single game
